# Yt-tracker

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: cron.yml
data/: channels.json
src/vtt/: __init__.py  gmail_fetch.py  google_auth.py  llm.py  tg.py  yt.py
